--- a/manuscript/common_latex.tex
+++ b/manuscript/common_latex.tex
@@ -1,18 +1,18 @@
 % species names
-\newcommand{\smonkey}[0]{\textit{A. fusciceps}\xspace}
-\newcommand{\cow}[0]{\textit{B. taurus}\xspace}
-\newcommand{\dog}[0]{\textit{C. familiaris}\xspace}
-\newcommand{\armadillo}[0]{\textit{D. novemcinctus}\xspace}
-\newcommand{\horse}[0]{\textit{E. caballus}\xspace}
-\newcommand{\elephant}[0]{\textit{L. africana}\xspace}
-\newcommand{\human}[0]{\textit{H. sapiens}\xspace}
-\newcommand{\opossum}[0]{\textit{M. domestica}\xspace}
-\newcommand{\mouse}[0]{\textit{M. musculus}\xspace}
-\newcommand{\galili}[0]{\textit{S. galili}\xspace}
-\newcommand{\sheep}[0]{\textit{O. aries}\xspace}
-\newcommand{\bonobo}[0]{\textit{P. paniscus}\xspace}
-\newcommand{\carmeli}[0]{\textit{S. carmeli}\xspace}
-\newcommand{\pig}[0]{\textit{S. scrofa}\xspace}
+\newcommand{\smonkey}[0]{\textit{Ateles fusciceps}\xspace}
+\newcommand{\cow}[0]{\textit{Bos taurus}\xspace}
+\newcommand{\dog}[0]{\textit{Canis familiaris}\xspace}
+\newcommand{\armadillo}[0]{\textit{Dasypus novemcinctus}\xspace}
+\newcommand{\horse}[0]{\textit{Equus caballus}\xspace}
+\newcommand{\elephant}[0]{\textit{Loxodonta africana}\xspace}
+\newcommand{\human}[0]{\textit{Homo sapiens}\xspace}
+\newcommand{\opossum}[0]{\textit{Monodelphis domestica}\xspace}
+\newcommand{\mouse}[0]{\textit{Mus musculus}\xspace}
+\newcommand{\galili}[0]{\textit{Spalax galili}\xspace}
+\newcommand{\sheep}[0]{\textit{Ovis aries}\xspace}
+\newcommand{\bonobo}[0]{\textit{Pan paniscus}\xspace}
+\newcommand{\carmeli}[0]{\textit{Spalax carmeli}\xspace}
+\newcommand{\pig}[0]{\textit{Sus scrofa}\xspace}
 
 % top 50 gene table explanation. Note that if you modify this, you
 % should probably also modify the human table explanation, which is
